ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src
#SUBDIRS = src tests

kexx2dir = $(datadir)/kexx2
dist_kexx2_DATA = data/kexx2.cfg

fontdir = $(datadir)/kexx2/fonts
dist_font_DATA = data/fonts/font1.bmp

gfxdir = $(datadir)/kexx2/gfx
dist_gfx_DATA = data/gfx/BonusBlaster.png \
		data/gfx/BonusRocket.png \
		data/gfx/EnemyBonus.png \
		data/gfx/EnemyRammer.png \
		data/gfx/EnemySideways.png \
		data/gfx/EnemyStd.png \
		data/gfx/Explosion1.png \
		data/gfx/Flame.png \
		data/gfx/GameComplete.png \
		data/gfx/KexxSoftware.png \
		data/gfx/Menulogo.png \
		data/gfx/ObjectBigship.png \
		data/gfx/SDLnow.png \
		data/gfx/Ship1.png \
		data/gfx/Ship2.png \
		data/gfx/ShotBlasterBig.png \
		data/gfx/ShotBlaster.png \
		data/gfx/ShotRocket.png \
		data/gfx/ShotStd2.png

levelsdir = $(datadir)/kexx2/levels
dist_levels_DATA = data/levels/level01.lev \
		   data/levels/level02.lev \
		   data/levels/levels.cfg

musicdir = $(datadir)/kexx2/music
dist_music_DATA = data/music/bgmusic1.xm

soundfxdir = $(datadir)/kexx2/soundfx
dist_soundfx_DATA = data/soundfx/alarm.wav \
		    data/soundfx/die.wav \
		    data/soundfx/explode2.wav \
		    data/soundfx/explode3.wav \
		    data/soundfx/gamecomplete.wav \
		    data/soundfx/levelcomplete.wav \
		    data/soundfx/newlevel.wav \
		    data/soundfx/playerhit.wav \
		    data/soundfx/rocketshot.wav \
		    data/soundfx/shoot1.wav

EXTRA_DIST = doc/file_specs.txt
